changes to remove warnings about no new line on headers and to correct firend class issue with scons build

--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -66,6 +66,7 @@ vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
 #ode_options.apply( lib_env )
 #opal_options.apply( lib_env )
+lib_env.Append( CPPFLAGS = ['-ffriend-injection'] )
 
 if baseEnv['StaticOnly'] == "no":
    lib = ves_pkg.createStaticAndSharedLibrary('VE_SceneGraphLib%s' %(execOsgPatTag),
