--- a/VE_Xplorer/GE/SConscript
+++ b/VE_Xplorer/GE/SConscript
@@ -49,7 +49,8 @@ env.ParseConfig('flagpoll vrjuggler --get-vrj-ogl-libs --libs --cflags')
 #opal_options.apply( env )
 #ode_options.apply( env )
 #opal_options.apply( env )
-   
+#env.Append( CPPFLAGS = ['-ffriend-injection'] )
+#env.Append( LINKFLAGS = ['-ffriend-injection'] )
 prog = ves_pkg.createProgram('project%s' %(execOsgPatTag), env, 'bin')
 prog.addSources( srcs )
 prog.build()
