--- a/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
+++ b/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
@@ -324,6 +324,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\IconChooser.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ListTable.cxx"
 				>
 				<FileConfiguration
@@ -596,6 +600,10 @@
 			</File>
 			<File
 				RelativePath=".\GlobalParamDialog.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IconChooser.h"
 				>
 			</File>
 			<File
