Removed IconChooser.cpp from GUIPluginLib.vcproj and added IconChooser.cxx to fix build

--- a/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
+++ b/VE_Conductor/GUIPlugin/GUIPluginLib.vcproj
@@ -324,7 +324,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\IconChooser.cpp"
+				RelativePath=".\IconChooser.cxx"
 				>
 			</File>
 			<File
