--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -31,6 +31,7 @@ sources = Split("""
     CADEntityHelper.cxx
     PhysicsSimulator.cxx
     Clone.cxx
+    Geode.cxx
 """)
 
 
@@ -61,6 +62,7 @@ headers = Split("""
     CADEntityHelper.h
     PhysicsSimulator.h
     Clone.h
+    Geode.h
 """)
 
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
