--- a/VE_Builder/Translator/DataLoader/DataLoader.vcproj
+++ b/VE_Builder/Translator/DataLoader/DataLoader.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;"
+				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VTK_HOME)\include\vtk-5.1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VE_USER_BUILDER_LIBRARY;WINVER=0x400;VTK44;FLUENT_MFIX"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib"
+				AdditionalDependencies="vtkCommon_d.lib vtkRendering_d.lib vtkGraphics_d.lib vtkIO_d.lib vtkFiltering_d.lib"
 				OutputFile="$(OutDir)/DataLoader_d.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(VTK_HOME)\lib&quot;"
