--- a/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
@@ -40,8 +40,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(WX_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
+				AdditionalIncludeDirectories="&quot;$(WX_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk-5.1&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400;BOOST_ALL_DYN_LINK"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -63,7 +63,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wxbase28d.lib wxmsw28d_core.lib vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib VE_UtilLib_d.lib libboost_filesystem-vc80-mt-gd-1_33_1.lib"
+				AdditionalDependencies="wxbase28d.lib wxmsw28d_core.lib vtkCommon_d.lib vtkRendering_d.lib vtkGraphics_d.lib vtkIO_d.lib vtkFiltering_d.lib VE_UtilLib_d.lib"
 				OutputFile="$(OutDir)/vtkTo3DTextured.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VTK_HOME)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
