--- a/VE_Builder/Utilities/mk/convertSurfaceFileToStl/convertSurfaceFileToStl.vcproj
+++ b/VE_Builder/Utilities/mk/convertSurfaceFileToStl/convertSurfaceFileToStl.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib vtkHybrid.lib"
+				AdditionalDependencies="vtkCommon_d.lib vtkRendering_d.lib vtkGraphics_d.lib vtkIO_d.lib vtkFiltering_d.lib vtkHybrid_d.lib"
 				OutputFile="$(OutDir)/convertSurfaceFileToStl.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(VTK_HOME)\lib&quot;"
