added sconscripts to install simple example as well as the dzr mk files. the simple install does not include a ves file since there is not a ves file by default. the current sconscript has plenty of examples to show how to add that later. in addition i changed the way the share directory is structured which will affect the launcher. this was done so that vesuite could be installed with other libraries like /usr/local or /opt/local. also removed old datasets since i do not think we are using them for testing anymore. can always be added back if needed.

--- a/share/SConscript
+++ b/share/SConscript
@@ -5,7 +5,7 @@ import SConsAddons.Util as sca_util
 
 Import('ves_pkg')
 
-launcherBundle = ves_pkg.createFileBundle( 'share' )
+launcherBundle = ves_pkg.createFileBundle( pj('share','vesuite') )
 jconfFile = sca_util.getFilesRecursiveByExt( '.', ['.jconf'] )
 launcherBundle.addFiles( jconfFile )
    
