--- a/share/docs/SConscript
+++ b/share/docs/SConscript
@@ -3,6 +3,7 @@
 Programs used:
 xmllint
 xalan OR saxon
+etc.
 """
 ##Builds docs
 import os, sys, string
@@ -26,7 +27,8 @@ fopVersion = "0.20.5"
 xsltTool = "Saxon" ##NOTE: Xalan.sh missing from VRAC intranet.
 imgPath = "../"
 chunkDirectory = "$SOURCE-multipage" ##Doublecheck later.
-passedEnvVars = "DOCBOOK_XSL=$XSL_DIR DOCBOOK_ROOT=$DOCBOOK_ROOT" + \
+passedEnvVars = "JAVA_HOME=$JAVA_HOME" + \
+                " DOCBOOK_XSL=$XSL_DIR DOCBOOK_ROOT=$DOCBOOK_ROOT" + \
                 " SAXON_DIR=$SAXON_DIR XALAN_DIR=$XALAN_DIR" + \
                 " DOCBOOK_XSL_VERSION=$DOCBOOK_XSL_VERSION" + \
                 " SAXON_VERSION=$SAXON_VERSION"
@@ -73,7 +75,7 @@ appPaths = {"FOP": "sh $DOCBOOK_ROOT/fop-$FOP_VERSION/%s" %(fopScript),
             "JADE": "openjade -V tex-backend",
             "JADEPROC": "$DOCBOOK_ROOT/jadeproc.pl",
             "JADETEX": "$TEX_BINDIR/jadetex",
-	    "JAVA_HOME": "/usr/java/j2sdk1.4.2_03",
+	    "JAVA_HOME": "/usr/java/jre1.5.0_04",
             "PDFJADETEX": "$TEX_BINDIR/pdfjadetex",
             "PDFLATEX": "$TEX_BINDIR/pdflatex",
             "PDFTEX": "$TEX_BINDIR/pdftex",
@@ -98,16 +100,6 @@ xslPaths = {"DOCBOOK_XSL": "$DOCBOOK_ROOT/docbook-xsl-$DOCBOOK_XSL_VERSION",
 htmlParams = {"html.stylesheet": "base_style.css",
               "img.src.path": imgPath}
 htmlChunkParams = {"base.dir": "${TARGET.dir}/"}
-
-##Text parameters. Currently not used.
-##if xsltTool == "Xalan":
-##    txtParams = {"page.margin.bottom": "0in",
-##                 "page.margin.inner": "0in",
-##                 "page.margin.outer": "0in",
-##                 "page.margin.top": "0in",
-##                 "paper.type": "A5"}
-##else:
-##    txtParams = {}
 
 ##Helper methods.
 def extraParamsCall(paramType, executable = xsltTool):
@@ -172,6 +164,8 @@ textTargets = map(lambda s: pj(baseDir, "%s/%s.txt" %(s,s)), srcs)
 pdfTargets = map(lambda s: pj(baseDir, "%s/%s.pdf" %(s,s)), srcs)
 srcs = map(lambda s: pj(baseDir, "%s.xml" %(s)), srcs)
 
+print resolvedSrcs, foedSrcs, htmlTargets, htmlChunkTargets, textTargets, pdfTargets, srcs ##TESTER
+
 ##NOTE: Build automated modifier instead of an if/else?
 if xsltTool == "Xalan":
     toolCall = "$XALAN"
@@ -214,6 +208,9 @@ env.Append(BUILDERS = {'xmlResolve': xmlResolveBuilder,
 		       'text': textBuilder,
 		       'pdf': pdfBuilder})
 
+for variable in ["JAVA_HOME", "XALAN", "DOCBOOK_XSL"]:
+    print variable, env[variable] ##TESTER
+
 ##Resolve the xml files.
 env.xmlResolve(srcs)
 env.fo(resolvedSrcs)
@@ -224,52 +221,3 @@ env.html(target = htmlTargets, source = resolvedSrcs)
 env.htmlChunk(target = htmlChunkTargets, source = resolvedSrcs)
 env.text(target = textTargets, source = htmlTargets)
 env.pdf(target = pdfTargets, source = foedSrcs)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-##txtBuild = Builder(action = )
-##pdfBuild = Builder(action = )
-
-##htmlAction = '
-##htmlBuild = Builder(action = htmlAction)
-##multiHtmlBuild = Builder(action = )
-
-##env.Append( LIBPATH = [pj('#', buildDir, 'VE_Xplorer','Utilities')],
-##            LIBS = ['VE_UtilLib'])
-##env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
-##vtk_options.apply( env )
-##
-##prog = ves_pkg.createProgram('preprocessor', env, 'bin')
-##prog.addSources( srcs )
-##prog.build()
-
-##targetModule = [pj('#','VE_Open','skel','moduleS.h'), 
-##          pj('#','VE_Open','skel','moduleC.h')]
-##targetVjObs = [pj('#','VE_Open','skel','VjObsS.h'), 
-##               pj('#','VE_Open','skel','VjObsC.h')]
-##taoPrefix=os.popen('flagpoll TAO --variable=prefix').read().strip()
-##env.PrependENVPath( 'LD_LIBRARY_PATH',pj( taoPrefix,'lib'))
-##env.PrependENVPath( 'PATH',pj( taoPrefix,'bin'))
-##tao_idl ='tao_idl'
-##idlCmd = tao_idl + ' -o ./VE_Open/skel -in -GC -GI  -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -##Wb,export_include=VE_Installer/include/VEConfig.h ${SOURCES}'
-##srcs = [pj('#',buildDir,'VE_Open','idl','module.idl'), 
-##        pj('#',buildDir,'VE_Open','idl','VjObs.idl')]
-##bld = Builder(action = idlCmd)
-##env.Append(BUILDERS = {'tao_idl': bld})
-##env.tao_idl(targetModule, pj('#',buildDir,'VE_Open','idl','module.idl'))
-##env.tao_idl(targetVjObs, pj('#',buildDir,'VE_Open','idl','VjObs.idl'))
