--- a/VE_TestSuite/SConscript
+++ b/VE_TestSuite/SConscript
@@ -17,3 +17,4 @@ launcherBundle.addFiles( vtuFile )
 launcherBundle.addFiles( veaFile )
 launcherBundle.addFiles( stlFile )
 launcherBundle.addFiles( [pj('STORED_FILES','file19.txt'),'Torus.obj'] )
+launcherBundle.addFiles( ['simple.ves'] )
