--- a/VE_Xplorer/GraphicalPlugin/SConscript
+++ b/VE_Xplorer/GraphicalPlugin/SConscript
@@ -27,8 +27,8 @@ lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
                         pj('#', buildDir, 'VE_Open','XML','Model'),
                         pj('#', buildDir, 'VE_Open','XML','CAD'),
                         pj('#', buildDir, 'VE_Open','XML','Shader')])
-lib_env.ParseConfig('flagpoll vrjuggler --libs --cflags')
-lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+lib_env.ParseConfig('flagpoll vrjuggler --require-Version=%s --libs --cflags'%lib_env['VRJugglerVersion'])
+lib_env.ParseConfig('flagpoll Boost.Filesystem --require-Version=%s --libs --cflags'%lib_env['BoostVersion'])
 
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
