--- a/VE_Xplorer/XplorerNetwork/SConscript
+++ b/VE_Xplorer/XplorerNetwork/SConscript
@@ -50,12 +50,13 @@ lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Xplorer','SceneGraph'),
                         pj('#', buildDir, 'VE_Open','XML','Model'),
                         pj('#', buildDir, 'VE_Open','XML','CAD')])
 
-lib_env.ParseConfig('flagpoll vrjuggler TAO \
+lib_env.ParseConfig('flagpoll TAO \
                           ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                           TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                           TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode \
                           --libs --cflags')
-lib_env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+lib_env.ParseConfig('flagpoll vrjuggler --require-Version=%s --libs --cflags'%lib_env['VRJugglerVersion'])
+lib_env.ParseConfig('flagpoll Boost.Filesystem --require-Version=%s --libs --cflags'%lib_env['BoostVersion'])
 
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
