--- a/VE_Xplorer/GE/SConscript
+++ b/VE_Xplorer/GE/SConscript
@@ -44,8 +44,8 @@ env.ParseConfig('flagpoll TAO \
                           TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
                           TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode \
                           --libs --cflags')
-env.ParseConfig('flagpoll vrjuggler --get-vrj-ogl-libs --libs --cflags')
-env.ParseConfig('flagpoll Boost.Filesystem --libs --cflags')
+env.ParseConfig('flagpoll vrjuggler --require-Version=%s --get-vrj-ogl-libs --libs --cflags'%env['VRJugglerVersion'])
+env.ParseConfig('flagpoll Boost.Filesystem --require-Version=%s --libs --cflags'%env['BoostVersion'])
 #opal_options.apply( env )
 #ode_options.apply( env )
 #opal_options.apply( env )
