--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -71,7 +71,9 @@ headers = Split("""
 
 lib_env = ves_pkg.getEnv().Copy()
 ##env.Append(CPPPATH = [os.getcwd()])
-lib_env.ParseConfig('flagpoll gmtl vrjuggler bullet --libs --cflags')
+lib_env.ParseConfig('flagpoll gmtl bullet --libs --cflags')
+lib_env.ParseConfig('flagpoll vrjuggler --require-Version=%s --libs --cflags'%lib_env['VRJugglerVersion'])
+
 vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
 #ode_options.apply( lib_env )
