--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -33,6 +33,7 @@ sources = Split("""
     Clone.cxx
     Geode.cxx
     TextTexture.cxx
+    FindParentsVisitor.cxx
 """)
 
 
@@ -65,6 +66,7 @@ headers = Split("""
     Clone.h
     Geode.h
     TextTexture.h
+    FindParentsVisitor.h
 """)
 
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
