--- a/VE_Xplorer/SceneGraph/SConscript
+++ b/VE_Xplorer/SceneGraph/SConscript
@@ -34,6 +34,7 @@ sources = Split("""
     Geode.cxx
     TextTexture.cxx
     FindParentsVisitor.cxx
+    PhysicsMesh.cxx
 """)
 
 
@@ -67,6 +68,7 @@ headers = Split("""
     Geode.h
     TextTexture.h
     FindParentsVisitor.h
+    PhysicsMesh.h
 """)
 
 ##srcs = map(lambda s: pj('#', 'VE_Xplorer', 'SceneGraph', s), srcs)
