VE-Suite: Changed velauncher call in .desktop file from absolute to relative path.

--- a/VE_Installer/installer/vesuite.desktop
+++ b/VE_Installer/installer/vesuite.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=VE-Suite
 X-Category=Graphics;Science;DataVisualization;Engineering;
 MimeType=application/x-vesuite;
-Exec=/home/users/mikelem/Desktop/VE_Suite/VE_Installer/installer/velauncher.py
+Exec=velauncher.py
 Icon=ve_icon48x48
 Type=Application
 Terminal=true
