--- a/VE_Installer/installer/SConscript
+++ b/VE_Installer/installer/SConscript
@@ -11,3 +11,7 @@ pyFile += sca_util.getFilesRecursiveByExt( '.', ['.xpm'] )
 pyFile += sca_util.getFilesRecursiveByExt( '.', ['.bmp'] )
 pyFile += sca_util.getFilesRecursiveByExt( '.', ['.png'] )
 launcherBundle.addFiles( pyFile )
+
+linuxDClick = ves_pkg.createFileBundle( pj('share','vesuite','misc' ) )
+dclickFiles = ['linuxVESuiteTypeInstall.sh','VE-Suite.xml','vesuite.desktop',pj('installerImages','gnome-mime-application-x-vesuite.png')]
+linuxDClick.addFiles( dclickFiles )
