update sconscript for installing kde dclick files

--- a/VE_Installer/installer/SConscript
+++ b/VE_Installer/installer/SConscript
@@ -13,5 +13,10 @@ pyFile += sca_util.getFilesRecursiveByExt( '.', ['.png'] )
 launcherBundle.addFiles( pyFile )
 
 linuxDClick = ves_pkg.createFileBundle( pj('share','vesuite','misc' ) )
-dclickFiles = ['linuxVESuiteTypeInstall.sh','VE-Suite.xml','vesuite.desktop',pj('installerImages','gnome-mime-application-x-vesuite.png')]
+dclickFiles = ['linuxVESuiteTypeInstall.sh',
+		'VE-Suite.xml',
+		'vesuite.desktop',
+		pj('installerImages','gnome-mime-application-x-vesuite.png'),
+		'kdeVesTypeInstall.sh',
+		'ves.desktop']
 linuxDClick.addFiles( dclickFiles )
