--- a/share/SConscript
+++ b/share/SConscript
@@ -5,7 +5,7 @@ import SConsAddons.Util as sca_util
 
 Import('ves_pkg')
 
-launcherBundle = ves_pkg.createFileBundle( pj('share','vesuite') )
+launcherBundle = ves_pkg.createFileBundle( pj('share','vesuite','vrj_configs') )
 jconfFile = sca_util.getFilesRecursiveByExt( '.', ['.jconf'] )
 launcherBundle.addFiles( jconfFile )
 
